# Yield_Curve_Interpolation

./: .gitignore  README.md  pyproject.toml
data/: curve_results_fluct.csv  curve_results_loo.csv  fama_term_structure.csv  interpolated_yield_curves.csv  rates.csv  treasury_prices.csv  treasurys_pricing_results.csv
doc/: model.md  references.bib  report.aux  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.out  report.run.xml  report.tex  report.toc  report.ttt
scripts/: main.ipynb  traditional_interpolation.ipynb
yield_curve_interpolation/: __init__.py  ml_interpolation.py  pricing.py  syreg.py  traditional_interpolation.py  utils.py  visualize.py
