[project]
name = "yield-curve-interpolation"
version = "0.1.0"
description = ""
authors = [
    {name = "QinqinAndMacaulayCat"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "gplearn (>=0.4.2,<0.5.0)",
    "pysr (>=1.5.9,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
